<resources>
    <string name="app_name">MyIntentApp</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="move_with_data">Pindah Activity dengan data</string>
    <string name="move_with_object">Pindah Activity dengan objek</string>
    <string name="dial_number">Dial a number</string>
    <string name="move_with_result">Pindah Activity untuk result</string>
    <string name="result_from_activity">Hasil dari Activity</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
    <string name="data_received">Data diterima</string>
    <string name="object_received">Objek diterima</string>
    <string name="this_is_move_activity">Ini move activity</string>
</resources>